--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
   <div class="message padt30 padb30">
     <div class="container">
-      <div class="row">
+     
         <div class="col-md-12">
           <h3 class="text-center">OUR
             FITNESS PROGRAMME</h3>
@@ -302,7 +302,7 @@
                 inventore sit.</p>
             </div>
           </div>
-        </div>
+        
       </div>
     </div>
   </div>
@@ -559,9 +559,9 @@
       document.getElementById('open').style.display = 'none';
     }
     function CloseSideMenu() {
-      document.getElementById('close').style.width = '0';
+      document.getElementById('close').style.display = 'none';
       document.getElementById('open').style.display = 'block';
-      document.getElementById('nav-links').style.display = 'none';
+      document.getElementById('nav-links').style.width = '0';
     }
   </script>
  
